--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <h2>Publications</h2>
 
-<p><a href="acsw2013.cis.unisa.edu.au/body/accepted_papers_body.html">replay: Visualising the Structure and Behaviour of Interconnected Systems </a></p>
+<p><a href="http://acsw2013.cis.unisa.edu.au/body/accepted_papers_body.html">replay: Visualising the Structure and Behaviour of Interconnected Systems </a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/alexmurray">alexmurray</a></p>
@@ -42,6 +42,6 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
