Add more info on replay and its dependencies

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
   </head>
   <body>
     <div class="wrapper">
@@ -28,13 +28,48 @@
         </ul>
       </header>
       <section>
-        <h3>replay</h3>
+	<p>Developed at DSTO Australia, replay was originally created
+	to visualize the Annex Object-Capability System - to help
+	developers understand and debug the system as it was created.
+	Since the Annex project is no longer active, replay has been
+	released as open source to allow others to use and contribute
+	to it's ongoing development.</p>
 
-<p>This is currently a placeholder, but will eventually be the project page for replay.</p>
+	<p>replay provides a highly intuitive interface to allow the
+	exploration of dynamic, interconnected systems.</p>
 
-<h2>Publications</h2>
+	<h2>Plugins</h2>
+	<p>replay includes a plugin system, to allow external software
+	to extend the functionality of replay, and to interface with
+	external data sources. Documentation for creating plugins will
+	be here soon, in the meantime a number of plugins already ship
+	with replay which can be used as the basis for the development
+	of further extensions.</p>
 
-<p><a href="http://acsw2013.cis.unisa.edu.au/body/accepted_papers_body.html">replay: Visualising the Structure and Behaviour of Interconnected Systems </a></p>
+	<h2>Dependencies</h2>
+	<p>replay was designed primarily to run under
+	the <a href="http://www.gnome.org">GNOME</a> desktop for Linux
+	and requires the following dependencies:<br>
+	<ul>
+	  <li>gnome-common</li>
+	  <li>pkg-config</li>
+	  <li>autoconf</li>
+	  <li>automake</li>
+	  <li>intltool</li>
+	  <li>gettext</li>
+	  <li>glib-2</li>
+	  <li>gtk+-3</li>
+	  <li>gtkglext-3</li>
+	  <li>libpeas</li>
+	</ul>
+	</p>
+
+	<h2>Packages</h2>
+	<p>Packages for Fedora coming soon...</p>
+
+	<h2>Publications</h2>
+
+	<p><a href="http://acsw2013.cis.unisa.edu.au/body/accepted_papers_body.html">replay: Visualising the Structure and Behaviour of Interconnected Systems </a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/alexmurray">alexmurray</a></p>
