--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>replay by alexmurray</title>
+    <title>Replay by alexmurray</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>replay</h1>
+        <h1>Replay</h1>
         <p>Visualizing dynamic, interconnected systems</p>
 
         <p class="view"><a href="https://github.com/alexmurray/replay">View the Project on GitHub <small>alexmurray/replay</small></a></p>
@@ -29,26 +29,26 @@
       </header>
       <section>
 	<h2>Overview</h2>
-	<p>Developed at DSTO Australia, replay was originally created
+	<p>Developed at DSTO Australia, Replay was originally created
 	to visualize the Annex Object-Capability System - to help
 	developers understand and debug the system as it was created.
-	Since the Annex project is no longer active, replay has been
+	Since the Annex project is no longer active, Replay has been
 	released as open source to allow others to use and contribute
 	to it's ongoing development.</p>
 
-	<p>replay provides a highly intuitive interface to allow the
+	<p>Replay provides a highly intuitive interface to allow the
 	exploration of dynamic, interconnected systems.</p>
 
 	<h2>Plugins</h2>
-	<p>replay includes a plugin system, to allow external software
-	to extend the functionality of replay, and to interface with
+	<p>Replay includes a plugin system, to allow external software
+	to extend the functionality of Replay, and to interface with
 	external data sources. Documentation for creating plugins will
 	be here soon, in the meantime a number of plugins already ship
-	with replay which can be used as the basis for the development
+	with Replay which can be used as the basis for the development
 	of further extensions.</p>
 
 	<h2>Dependencies</h2>
-	<p>replay was designed primarily to run under
+	<p>Replay was designed primarily to run under
 	the <a href="http://www.gnome.org">GNOME</a> desktop for Linux
 	and requires the following dependencies:<br>
 	<ul>
@@ -69,7 +69,7 @@
 	<p>Packages for Fedora coming soon...</p>
 
 	<h2>Compiling from source</h2>
-	<p>To build replay from git:</p>
+	<p>To build Replay from git:</p>
 	<pre><code>git checkout https://github.com/alexmurray/replay.git
 cd replay
 ./autogen.sh --prefix=/usr --enable-gtk-doc --enable-debug # for 64-bit Fedora add --libdir=/usr/lib64
@@ -78,6 +78,17 @@ sudo make install</code></pre>
 
 	<h2>Publications</h2>
 	<p><a href="http://acsw2013.cis.unisa.edu.au/body/accepted_papers_body.html">replay: Visualising the Structure and Behaviour of Interconnected Systems </a></p>
+
+	<h2>License</h2>
+	<p>Replay is Copyright (C) 2012 Commonwealth of Australia.</p>
+
+	<p>Replay is licensed under the GNU General Public License version 3
+	  (GPLv3) with extensions as allowed under clause 7 of GPL v3 to clarify
+	  issues of indemnity and liability.</p>
+
+	<p>Please see
+	  the <a href="https://github.com/alexmurray/replay/blob/master/COPYING">COPYING</a>
+	  file distributed with Replay for futher details.</p>
       </section>
 
       <footer>
