Add yelp-tools to dependencies list

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	  <li>gtk+-3</li>
 	  <li>gtkglext-3</li>
 	  <li>libpeas</li>
+	  <li>yelp-tools (for building source code documentation with --enable-gtk-doc configure flag)</li>
 	</ul>
 	</p>
 
