Add screenshhot from fdr plugin

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 	released as open source to allow others to use and contribute
 	to it's ongoing development.</p>
 
+	<a href="screenshot.png"><img src="screenshot.png"></a>
+
 	<p>Replay provides a highly intuitive interface to allow the
 	exploration of dynamic, interconnected systems.</p>
 
