Add a link to the online API documentation

--- a/index.html
+++ b/index.html
@@ -44,10 +44,17 @@
 	<h2>Plugins</h2>
 	<p>Replay includes a plugin system, to allow external software
 	to extend the functionality of Replay, and to interface with
-	external data sources. Documentation for creating plugins will
-	be here soon, in the meantime a number of plugins already ship
-	with Replay which can be used as the basis for the development
-	of further extensions.</p>
+	external data sources.</p>
+
+	<p>API Documentation is generated for Replay when building
+	from source using the <code>--enable-gtk-doc</code>
+	option to <code>configure</code>. A copy of the API
+	documentation for the current release of Replay is
+	available <a href="docs/0.8/index.html">here</a></p>
+
+	<p>Plugins written in both C and Python already ship with
+	Replay which can be used as the basis for the development of
+	further extensions.</p>
 
 	<h2>Dependencies</h2>
 	<p>Replay was designed primarily to run under
