Update for 0.8.1 release

--- a/index.html
+++ b/index.html
@@ -76,13 +76,16 @@
 	</p>
 
 	<h2>Packages</h2>
+	<p>The latest version of Replay is 0.8.1</p>
+
 	<p>Packages for both Replay and GtkGLExt 3.0 on 64-bit Fedora are provided:</p>
 	<ul>
 	  <li><a href="https://s3.amazonaws.com/replaypackages/gtkglext-libs-2.99.0-1.fc18.x86_64.rpm">gtkglext-libs-2.99.0-1.fc18.x86_64.rpm</a></li>
 	  <li><a href="https://s3.amazonaws.com/replaypackages/gtkglext-devel-2.99.0-1.fc18.x86_64.rpm">gtkglext-devel-2.99.0-1.fc18.x86_64.rpm</a> (required to build Replay from source)</li>
-	  <li><a href="https://s3.amazonaws.com/replaypackages/replay-0.8.0-1.fc18.x86_64.rpm">replay-0.8.0-1.fc18.x86_64.rpm</a></li>
-	  <li><a href="https://s3.amazonaws.com/replaypackages/replay-devel-0.8.0-1.fc18.x86_64.rpm">replay-devel-0.8.0-1.fc18.x86_64.rpm</a> (required to build external plugins for Replay written in C)</li>
+	  <li><a href="https://s3.amazonaws.com/replaypackages/replay-0.8.1-1.fc18.x86_64.rpm">replay-0.8.1-1.fc18.x86_64.rpm</a></li>
+	  <li><a href="https://s3.amazonaws.com/replaypackages/replay-devel-0.8.1-1.fc18.x86_64.rpm">replay-devel-0.8.1-1.fc18.x86_64.rpm</a> (required to build external plugins for Replay written in C)</li>
 	</ul>
+
 	<h2>Compiling from source</h2>
 	<p>To build Replay from git:</p>
 	<pre><code>git checkout https://github.com/alexmurray/replay.git
