Add link to published paper

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ make
 sudo make install</code></pre>
 
 	<h2>Publications</h2>
-	<p><a href="http://acsw2013.cis.unisa.edu.au/body/accepted_papers_body.html">replay: Visualising the Structure and Behaviour of Interconnected Systems </a> - To be presented at the Australasian Computer Science Conference (ACSC) 2013 on 30th January 2013 in Adelaide (actual paper coming soon)</p>
+	<p><a href="http://crpit.com/confpapers/CRPITV135Murray.pdf‎">replay: Visualising the Structure and Behaviour of Interconnected Systems </a> - Presented at the Australasian Computer Science Conference (ACSC) 2013 on 30th January 2013 in Adelaide</p>
 
 	<h2>License</h2>
 	<p>Replay is Copyright (C) 2012 Commonwealth of Australia.</p>
